<resources>
    <string name="app_name">Flora Vista</string>

    <string name="logout">Log out</string>
    <string name="about">About</string>
    <string name="profile_tooltip">a fellow gardener</string>
    <string name="seeall">See All</string>
    <string name="history">History</string>
    <string name="garden">Garden</string>
    <string name="outdoor">Outdoor</string>
    <string name="indoor">Indoor</string>
    <string name="categories">Categories</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="get">Get Started</string>
    <string name="welcome">Welcome!</string>
    <string name="signup">Sign up</string>
    <string name="signup_desc">Create an account to get started</string>
    <string name="email">Email Address</string>
    <string name="pass">Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="now">Register now</string>
    <string name="not">Not a member?</string>
    <string name="cont">Or continue with</string>
    <string name="name">Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
	<string name="plant_name">Monsterra Borgisiana</string>
    <string name="plant_brief">A variety of Monsterra</string>
    <string name="plant_desc">A genus of 59 species of flowering plants in the arum family, Araceae, native to tropical regions of the Americas</string>
    <string name="family">Family :</string>
    <string name="plant_family">Monsterra</string>
    <string name="healthy">Healthiness :</string>
    <string name="plant_health">Healthy</string>
    <string name="hi">Hi there,</string>
    <string name="cardTitle1">Proper Watering keeps plant happy</string>
    <string name="cardText1">Plants use carbon dioxide along with water to make their food via photosynthesis.</string>
    <string name="cardTitle2">Card 2</string>
    <string name="cardText2">Text 2</string>
    <string name="cardTitle3">Card 3</string>
    <string name="cardText3">Text 2</string>
    <string name="title_activity_menu_bottom">MenuBottom</string>
    <string name="nothing">Nothing here. For now.</string>
    <string name="scanned">This is where you\'ll find your \n scanned plants.</string>
    <string name="startscan">Start scanning</string>
</resources>