<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/plant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_black"
        android:text="@string/plant_name"
        android:textSize="33sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AppBar" />

    <TextView
        android:id="@id/plant_brief"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/gray2"
        android:text="@string/plant_brief"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_name" />

    <ImageView
        android:id="@+id/plant_pic"
        android:layout_width="396dp"
        android:layout_height="470dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/mons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppBar" />

    <TextView
        android:id="@+id/plant_brief"
        android:layout_width="377dp"
        android:layout_height="62dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/plant_desc"
        android:textColor="@color/gray2"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_pic" />

    <ImageView
        android:id="@+id/rectangle_fam"
        android:layout_width="163dp"
        android:layout_height="85dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_brief" />

    <ImageView
        android:id="@+id/rec_health"
        android:layout_width="192dp"
        android:layout_height="87dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_brief" />

    <TextView
        android:id="@+id/healthiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/healthy"
        android:textColor="@color/gray2"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/plant_family"
        app:layout_constraintTop_toBottomOf="@id/plant_brief" />


    <TextView
        android:id="@+id/plant_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/plant_health"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintStart_toEndOf="@id/family"
        app:layout_constraintTop_toBottomOf="@+id/healthiness" />

    <TextView
        android:id="@+id/plant_family"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/family"
        android:textColor="@color/gray2"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_brief" />

    <TextView
        android:id="@+id/family"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/plant_family"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_family" />


</androidx.constraintlayout.widget.ConstraintLayout>