<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:id="@+id/welcome_img"
        android:layout_width="393dp"
        android:layout_height="296dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:adjustViewBounds="true"
        android:background="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:alpha="0"
        tools:alpha="100"
        android:fontFamily="@font/inter_black"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_img" />


    <TextView
        android:id="@+id/latinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:alpha="0"
        android:fontFamily="@font/inter"
        android:text="/ˈwelkəm/"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        tools:alpha="100" />


    <EditText
        android:id="@+id/emailEditTextLayout"
        android:layout_width="match_parent"
        android:background="@drawable/custom_input"
        android:layout_height="50dp"
        android:drawablePadding="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:fontFamily="@font/inter"
        android:alpha="0"
        tools:alpha="100"
        android:singleLine="true"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latinView">
    </EditText>


    <EditText
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="match_parent"
        android:background="@drawable/custom_input"
        android:layout_height="50dp"
        android:drawablePadding="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:fontFamily="@font/inter"
        android:alpha="0"
        tools:alpha="100"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:hint="@string/pass"
        android:singleLine="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout">
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="348dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="100"
        android:background="@drawable/custom_login_button"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/login"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

    <TextView
        android:id="@+id/not_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        tools:alpha="100"
        android:fontFamily="@font/inter"
        android:text="@string/not"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <TextView
        android:id="@+id/register_now"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/now"
        android:clickable="true"
        android:alpha="0"
        tools:alpha="100"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintLeft_toRightOf="@id/not_member"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>