<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".view.register.SignupActivity">

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/inter_black"
        android:text="@string/signup"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/inter"
        android:text="@string/signup_desc"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <ImageView
    android:id="@+id/bunga"
    android:layout_width="150dp"
    android:layout_height="350dp"
    android:layout_marginStart="310dp"
    android:layout_marginBottom="370dp"
    android:adjustViewBounds="true"
    android:background="@drawable/bunga"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:alpha="0"
        tools:alpha="100"
        android:fontFamily="@font/inter_black"
        android:text="@string/name"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_description" />

    <EditText
        android:id="@+id/name_textbox"
        android:layout_width="match_parent"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:layout_height="50dp"
        android:drawablePadding="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:fontFamily="@font/inter"
        android:alpha="0"
        tools:alpha="100"
        android:singleLine="true"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:hint="@string/name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_title"/>

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:alpha="0"
        tools:alpha="100"
        android:fontFamily="@font/inter_black"
        android:text="@string/email"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_textbox" />

    <EditText
        android:id="@+id/emailEditTextLayout"
        android:layout_width="match_parent"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:layout_height="50dp"
        android:drawablePadding="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:fontFamily="@font/inter"
        android:alpha="0"
        tools:alpha="100"
        android:singleLine="true"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_title"/>

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:alpha="0"
        tools:alpha="100"
        android:fontFamily="@font/inter_black"
        android:text="@string/pass"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />

    <EditText
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="match_parent"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:layout_height="50dp"
        android:drawablePadding="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:singleLine="true"
        android:fontFamily="@font/inter"
        android:alpha="0"
        tools:alpha="100"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_title"/>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="348dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="100"
        android:background="@drawable/custom_login_button"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/signup"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />




</androidx.constraintlayout.widget.ConstraintLayout>